--- a/Go.gov.sg.html
+++ b/Go.gov.sg.html
@@ -32,9 +32,88 @@
             class="jss302"></span></a>
       </div>
     </header>
-    <shooting-stars image="/assets/meteor.svg" height="&#39;20px&#39;" width="&#39;20px&#39;" min-speed="6"
+    <shooting-stars image="/meteor.svg" height="&#39;20px&#39;" width="&#39;20px&#39;" min-speed="6"
       max-speed="18" num="40" class="hydrated"
       style="z-index: -1; height: 100%; width: 100%; position: absolute; display: block; --distance:-1800.29px;">
+      <div id="background"><img class="star" src="./meteor.svg"
+          style="left: 5.8534px; animation-delay: -6.61427s; animation-duration: 18.2199s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 125.133px; animation-delay: -2.44076s; animation-duration: 21.1452s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 140.77px; animation-delay: -17.9827s; animation-duration: 12.3917s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 219.257px; animation-delay: -25.3406s; animation-duration: 11.3919s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 287.377px; animation-delay: -16.3073s; animation-duration: 9.35028s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 346.243px; animation-delay: -4.77982s; animation-duration: 13.0969s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 467.706px; animation-delay: -10.5783s; animation-duration: 10.6869s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 481.183px; animation-delay: -2.07075s; animation-duration: 17.7937s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 590.753px; animation-delay: -17.4684s; animation-duration: 11.757s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 613.369px; animation-delay: -33.9882s; animation-duration: 9.22236s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 711.208px; animation-delay: -1.23906s; animation-duration: 13.8895s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 787.642px; animation-delay: -16.6131s; animation-duration: 13.1618s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 853.528px; animation-delay: -13.8069s; animation-duration: 11.6249s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 907.834px; animation-delay: -14.6655s; animation-duration: 12.6995s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 989.301px; animation-delay: -0.627087s; animation-duration: 21.3528s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1071.42px; animation-delay: -9.37359s; animation-duration: 20.8962s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1112.58px; animation-delay: -9.04785s; animation-duration: 19.9135s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1161.75px; animation-delay: -26.1832s; animation-duration: 7.86994s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1249.64px; animation-delay: -25.1759s; animation-duration: 10.7787s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1282.03px; animation-delay: -20.1436s; animation-duration: 6.94937s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1369.05px; animation-delay: -22.4605s; animation-duration: 16.8985s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1425.97px; animation-delay: -14.6382s; animation-duration: 9.74225s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1549.38px; animation-delay: -19.1031s; animation-duration: 16.7672s;"><img class="star"
+          src="./meteor.svg" style="left: 1609px; animation-delay: -17.0924s; animation-duration: 21.6916s;"><img
+          class="star" src="./meteor.svg"
+          style="left: 1653.68px; animation-delay: -14.0466s; animation-duration: 12.6659s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1728.02px; animation-delay: -0.346316s; animation-duration: 15.0085s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1777.7px; animation-delay: -26.4954s; animation-duration: 9.65506s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1882.85px; animation-delay: -22.7508s; animation-duration: 19.6337s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1936.6px; animation-delay: -12.2416s; animation-duration: 19.7263s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 1982.85px; animation-delay: -11.1604s; animation-duration: 8.47124s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2075.85px; animation-delay: -4.47039s; animation-duration: 18.5424s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2139.53px; animation-delay: -35.4989s; animation-duration: 19.8289s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2188.81px; animation-delay: -35.9752s; animation-duration: 19.6676s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2291.06px; animation-delay: -32.9528s; animation-duration: 11.7302s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2344.48px; animation-delay: -33.3594s; animation-duration: 17.4888s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2403.4px; animation-delay: -19.6857s; animation-duration: 17.7339s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2432.45px; animation-delay: -5.00081s; animation-duration: 7.27146s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2504.4px; animation-delay: -10.1417s; animation-duration: 9.75141s;"><img class="star"
+          src="./meteor.svg"
+          style="left: 2586.17px; animation-delay: -37.5537s; animation-duration: 21.3467s;"><img class="star"
+          src="./meteor.svg" style="left: 2645.01px; animation-delay: -14.0195s; animation-duration: 20.9226s;">
+      </div>
     </shooting-stars>
     <main class="jss8">
       <div>
