need to do lights

--- a/Go.gov.sg.html
+++ b/Go.gov.sg.html
@@ -7,6 +7,7 @@
   <link href="./font.css" rel="stylesheet">
   <link href="./go.gov.sg.css" rel="stylesheet">
   <link href="./varfont.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css">
   <title>Go.gov.sg</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://go.gov.sg/favicon.ico">
@@ -22,95 +23,77 @@
             <a href="https://go.gov.sg/#">.gov.sg</a>
           </h6>
         </div>
-        <a class="jss113 jss87 jss89 jss92 jss111 jss108 jss4" tabindex="0" role="button"
-          href="https://form.gov.sg/forms/govtech/5c5295edb3d80b0017ac7c81">
-          <span class="jss88">Contact Us</span><span class="jss302"></span></a><a
-          class="jss113 jss87 jss89 jss92 jss111 jss108 jss4" tabindex="0" role="button"
-          href="https://go.gov.sg/#/faq"><span class="jss88">Help</span><span class="jss302"></span></a><span
-          class="jss6"></span> <span></span><a class="jss113 jss87 jss98 jss100 jss101 jss103 jss111 jss5" tabindex="0"
-          role="button" href="https://go.gov.sg/#/login"><span class="jss88">Sign in</span><span
-            class="jss302"></span></a>
+        <!-- TOP BUTTONS https://v-fonts.com/fonts/san-francisco-rounded -->
+        <a class="topbutton var" href="https://form.gov.sg/forms/govtech/5c5295edb3d80b0017ac7c81">
+          <span class="js88">Contact Us</span><span class="jss302"></span></a>
+        <!-- TOP BUTTONS -->
+        <a class="topbutton var" href="https://go.gov.sg/#/faq"><span class="jss88">Help</span><span
+            class="jss302"></span></a><span class="jss6"></span> <span></span><a
+          class="jss113 jss87 jss98 jss100 jss101 jss103 jss111 jss5" tabindex="0" role="button"
+          href="https://go.gov.sg/#/login"><span class="jss88">Sign in</span><span class="jss302"></span></a>
       </div>
     </header>
-    <shooting-stars image="/meteor.svg" height="&#39;20px&#39;" width="&#39;20px&#39;" min-speed="6"
-      max-speed="18" num="40" class="hydrated"
+    <shooting-stars image="/meteor.svg" height="&#39;20px&#39;" width="&#39;20px&#39;" min-speed="6" max-speed="18"
+      num="40" class="hydrated"
       style="z-index: -1; height: 100%; width: 100%; position: absolute; display: block; --distance:-1800.29px;">
       <div id="background"><img class="star" src="./meteor.svg"
           style="left: 5.8534px; animation-delay: -6.61427s; animation-duration: 18.2199s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 125.133px; animation-delay: -2.44076s; animation-duration: 21.1452s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 125.133px; animation-delay: -2.44076s; animation-duration: 21.1452s;"><img
+          class="star" src="./meteor.svg"
           style="left: 140.77px; animation-delay: -17.9827s; animation-duration: 12.3917s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 219.257px; animation-delay: -25.3406s; animation-duration: 11.3919s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 219.257px; animation-delay: -25.3406s; animation-duration: 11.3919s;"><img
+          class="star" src="./meteor.svg"
           style="left: 287.377px; animation-delay: -16.3073s; animation-duration: 9.35028s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 346.243px; animation-delay: -4.77982s; animation-duration: 13.0969s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 346.243px; animation-delay: -4.77982s; animation-duration: 13.0969s;"><img
+          class="star" src="./meteor.svg"
           style="left: 467.706px; animation-delay: -10.5783s; animation-duration: 10.6869s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 481.183px; animation-delay: -2.07075s; animation-duration: 17.7937s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 481.183px; animation-delay: -2.07075s; animation-duration: 17.7937s;"><img
+          class="star" src="./meteor.svg"
           style="left: 590.753px; animation-delay: -17.4684s; animation-duration: 11.757s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 613.369px; animation-delay: -33.9882s; animation-duration: 9.22236s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 613.369px; animation-delay: -33.9882s; animation-duration: 9.22236s;"><img
+          class="star" src="./meteor.svg"
           style="left: 711.208px; animation-delay: -1.23906s; animation-duration: 13.8895s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 787.642px; animation-delay: -16.6131s; animation-duration: 13.1618s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 787.642px; animation-delay: -16.6131s; animation-duration: 13.1618s;"><img
+          class="star" src="./meteor.svg"
           style="left: 853.528px; animation-delay: -13.8069s; animation-duration: 11.6249s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 907.834px; animation-delay: -14.6655s; animation-duration: 12.6995s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 907.834px; animation-delay: -14.6655s; animation-duration: 12.6995s;"><img
+          class="star" src="./meteor.svg"
           style="left: 989.301px; animation-delay: -0.627087s; animation-duration: 21.3528s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1071.42px; animation-delay: -9.37359s; animation-duration: 20.8962s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1071.42px; animation-delay: -9.37359s; animation-duration: 20.8962s;"><img
+          class="star" src="./meteor.svg"
           style="left: 1112.58px; animation-delay: -9.04785s; animation-duration: 19.9135s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1161.75px; animation-delay: -26.1832s; animation-duration: 7.86994s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1161.75px; animation-delay: -26.1832s; animation-duration: 7.86994s;"><img
+          class="star" src="./meteor.svg"
           style="left: 1249.64px; animation-delay: -25.1759s; animation-duration: 10.7787s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1282.03px; animation-delay: -20.1436s; animation-duration: 6.94937s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1282.03px; animation-delay: -20.1436s; animation-duration: 6.94937s;"><img
+          class="star" src="./meteor.svg"
           style="left: 1369.05px; animation-delay: -22.4605s; animation-duration: 16.8985s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1425.97px; animation-delay: -14.6382s; animation-duration: 9.74225s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1425.97px; animation-delay: -14.6382s; animation-duration: 9.74225s;"><img
+          class="star" src="./meteor.svg"
           style="left: 1549.38px; animation-delay: -19.1031s; animation-duration: 16.7672s;"><img class="star"
           src="./meteor.svg" style="left: 1609px; animation-delay: -17.0924s; animation-duration: 21.6916s;"><img
           class="star" src="./meteor.svg"
           style="left: 1653.68px; animation-delay: -14.0466s; animation-duration: 12.6659s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1728.02px; animation-delay: -0.346316s; animation-duration: 15.0085s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1728.02px; animation-delay: -0.346316s; animation-duration: 15.0085s;"><img
+          class="star" src="./meteor.svg"
           style="left: 1777.7px; animation-delay: -26.4954s; animation-duration: 9.65506s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1882.85px; animation-delay: -22.7508s; animation-duration: 19.6337s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1882.85px; animation-delay: -22.7508s; animation-duration: 19.6337s;"><img
+          class="star" src="./meteor.svg"
           style="left: 1936.6px; animation-delay: -12.2416s; animation-duration: 19.7263s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 1982.85px; animation-delay: -11.1604s; animation-duration: 8.47124s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 1982.85px; animation-delay: -11.1604s; animation-duration: 8.47124s;"><img
+          class="star" src="./meteor.svg"
           style="left: 2075.85px; animation-delay: -4.47039s; animation-duration: 18.5424s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 2139.53px; animation-delay: -35.4989s; animation-duration: 19.8289s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 2139.53px; animation-delay: -35.4989s; animation-duration: 19.8289s;"><img
+          class="star" src="./meteor.svg"
           style="left: 2188.81px; animation-delay: -35.9752s; animation-duration: 19.6676s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 2291.06px; animation-delay: -32.9528s; animation-duration: 11.7302s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 2291.06px; animation-delay: -32.9528s; animation-duration: 11.7302s;"><img
+          class="star" src="./meteor.svg"
           style="left: 2344.48px; animation-delay: -33.3594s; animation-duration: 17.4888s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 2403.4px; animation-delay: -19.6857s; animation-duration: 17.7339s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 2403.4px; animation-delay: -19.6857s; animation-duration: 17.7339s;"><img
+          class="star" src="./meteor.svg"
           style="left: 2432.45px; animation-delay: -5.00081s; animation-duration: 7.27146s;"><img class="star"
-          src="./meteor.svg"
-          style="left: 2504.4px; animation-delay: -10.1417s; animation-duration: 9.75141s;"><img class="star"
-          src="./meteor.svg"
+          src="./meteor.svg" style="left: 2504.4px; animation-delay: -10.1417s; animation-duration: 9.75141s;"><img
+          class="star" src="./meteor.svg"
           style="left: 2586.17px; animation-delay: -37.5537s; animation-duration: 21.3467s;"><img class="star"
           src="./meteor.svg" style="left: 2645.01px; animation-delay: -14.0195s; animation-duration: 20.9226s;">
       </div>
@@ -119,8 +102,12 @@
       <div>
         <div>
           <div class="jss116">
-            <h2 class="jss51 jss64 jss83 jss78 jss74 varheader">
-              Create official government links in seconds.
+            <!-- HEADER TEXT -->
+            <h2 class="jss51 jss64 jss83 jss78 jss74 header var">
+              Create official government
+              <br />
+              links
+              in seconds.
             </h2>
             <div>
               <form align="center">
@@ -172,13 +159,16 @@
             <div class="jss128 jss154">
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
-                  <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
+                  <!-- Start -->
+                  <span class="var icon">🔒</span>
+                  <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
                       role="presentation">
                       <path fill="none" d="M0 0h24v24H0z"></path>
                       <path
                         d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z">
                       </path>
-                    </svg></div>
+                    </svg></div> -->
+                  <!-- End -->
                   <div class="jss292 jss120">
                     <h2 class="jss51 jss67 jss84 jss78">Anti-phishing</h2>
                     <p class="jss51 jss59 jss84">Shorten your links with a trustworthy gov.sg domain, so your users know
@@ -188,31 +178,33 @@
               </div>
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
-                  <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
+                  <span class="var icon clap">🐢</span>
+                  <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
                       role="presentation">
                       <path fill="none" d="M0 0h24v24H0z"></path>
                       <path
                         d="M16.5 13c-1.2 0-3.07.34-4.5 1-1.43-.67-3.3-1-4.5-1C5.33 13 1 14.08 1 16.25V19h22v-2.75c0-2.17-4.33-3.25-6.5-3.25zm-4 4.5h-10v-1.25c0-.54 2.56-1.75 5-1.75s5 1.21 5 1.75v1.25zm9 0H14v-1.25c0-.46-.2-.86-.52-1.22.88-.3 1.96-.53 3.02-.53 2.44 0 5 1.21 5 1.75v1.25zM7.5 12c1.93 0 3.5-1.57 3.5-3.5S9.43 5 7.5 5 4 6.57 4 8.5 5.57 12 7.5 12zm0-5.5c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm9 5.5c1.93 0 3.5-1.57 3.5-3.5S18.43 5 16.5 5 13 6.57 13 8.5s1.57 3.5 3.5 3.5zm0-5.5c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2z">
                       </path>
-                    </svg></div>
+                    </svg></div> -->
+                  <!-- END -->
                   <div class="jss292 jss120">
-                    <h2 class="jss51 jss67 jss84 jss78">Customised</h2>
-                    <p class="jss51 jss59 jss84">Long URLs are hard to remember and take up space. Create and share
-                      short links instead.</p>
+                    <h2 class="jss51 jss67 jss84 jss78">Turtling in danger</h2>
+                    <p class="jss51 jss59 jss84">We deploy our DDOS protection when we suspect your site is under attack</p>
                   </div>
                 </div>
               </div>
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
-                  <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
-                      role="presentation">
-                      <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"></path>
-                      <path fill="none" d="M0 0h24v24H0z"></path>
-                    </svg></div>
+                    <span class="var icon">🕛</span>
+                    <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
+                        role="presentation">
+                        <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"></path>
+                        <path fill="none" d="M0 0h24v24H0z"></path>
+                      </svg></div> -->
+                  <!-- END -->
                   <div class="jss292 jss120">
-                    <h2 class="jss51 jss67 jss84 jss78">Analytics</h2>
-                    <p class="jss51 jss59 jss84">Want to know how popular your links are? Track each link's click rate
-                      through our web interface.</p>
+                    <h2 class="jss51 jss67 jss84 jss78">24/7 Uptime</h2>
+                    <p class="jss51 jss59 jss84">We're always up! Unless CloudFlare goes down.</p>
                   </div>
                 </div>
               </div>
