--- a/Go.gov.sg.html
+++ b/Go.gov.sg.html
@@ -18,7 +18,7 @@
     <header class="jss20 jss26 jss11 jss15 jss18 jss1">
       <div class="jss47 jss49 jss48 jss2">
         <div class="jss7">
-          <h2 class="jss51 jss64 jss80 jss78"><a href="https://go.gov.sg/#">go</a></h2>
+          <h2 class="jss51 jss64 jss80 jss78"><a href="https://go.gov.sg/#" class="var shine">go</a></h2>
           <h6 class="jss51 jss70 jss80">
             <a href="https://go.gov.sg/#">.gov.sg</a>
           </h6>
@@ -231,7 +231,10 @@
       </div>
     </footer>
   </div>
-  <script src="./var.js"></script>
+  <script src="./js/common.js"></script>
+  <script src="./js/squeeze.js"></script>
+  <script src="./js/sound.js"></script>
+  <script src="./js/dark.js"></script>
 </body>
 
 </html>
