--- a/Go.gov.sg.html
+++ b/Go.gov.sg.html
@@ -179,7 +179,7 @@
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
                   <!-- <span class="var icon clap">🐢</span> -->
-                  <span class="var icon">🐢</span>
+                  <span class="var icon clap">🐢</span>
                   <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
                       role="presentation">
                       <path fill="none" d="M0 0h24v24H0z"></path>
