--- a/Go.gov.sg.html
+++ b/Go.gov.sg.html
@@ -8,6 +8,7 @@
   <link href="./go.gov.sg.css" rel="stylesheet">
   <link href="./varfont.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet">
   <title>Go.gov.sg</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://go.gov.sg/favicon.ico">
@@ -18,16 +19,16 @@
     <header class="jss20 jss26 jss11 jss15 jss18 jss1">
       <div class="jss47 jss49 jss48 jss2">
         <div class="jss7">
-          <h2 class="jss51 jss64 jss80 jss78"><a href="https://go.gov.sg/#" class="var shine">go</a></h2>
+          <h2 class="jss51 jss64 jss80 jss78"><a href="https://go.gov.sg/#" class="nonvar shine">go</a></h2>
           <h6 class="jss51 jss70 jss80">
             <a href="https://go.gov.sg/#">.gov.sg</a>
           </h6>
         </div>
         <!-- TOP BUTTONS https://v-fonts.com/fonts/san-francisco-rounded -->
-        <a class="topbutton var" href="https://form.gov.sg/forms/govtech/5c5295edb3d80b0017ac7c81">
+        <a class="topbutton nonvar" href="https://form.gov.sg/forms/govtech/5c5295edb3d80b0017ac7c81">
           <span class="js88">Contact Us</span><span class="jss302"></span></a>
         <!-- TOP BUTTONS -->
-        <a class="topbutton var" href="https://go.gov.sg/#/faq"><span class="jss88">Help</span><span
+        <a class="topbutton nonvar" href="https://go.gov.sg/#/faq"><span class="jss88">Help</span><span
             class="jss302"></span></a><span class="jss6"></span> <span></span><a
           class="jss113 jss87 jss98 jss100 jss101 jss103 jss111 jss5" tabindex="0" role="button"
           href="https://go.gov.sg/#/login"><span class="jss88">Sign in</span><span class="jss302"></span></a>
@@ -103,7 +104,7 @@
         <div>
           <div class="jss116">
             <!-- HEADER TEXT -->
-            <h2 class="jss51 jss64 jss83 jss78 jss74 header var">
+            <h2 class="jss51 jss64 jss83 jss78 jss74 header nonvar">
               Create official government
               <br />
               links
@@ -155,19 +156,19 @@
           <div class="jss116">
             <h4 class="jss51 jss66 jss84 jss78 jss74">Why use <strong>Go.gov.sg</strong>?</h4>
             <p class="jss51 jss60 jss84 jss79 jss74"><strong>Go.gov.sg</strong> is the<i> official</i> link shortener
-              for the Singapore government, with 1836 users, 7136 links, and 1037328 total clicks.</p>
+              for the Singapore government, 3327 users, 15969 links, and 2060665 total clicks.</p>
             <div class="jss128 jss154">
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
                   <!-- Start -->
-                  <span class="var icon">🔒</span>
-                  <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
+                  <span class="nonvar icon">🔒</span>
+                  <div class="nonvar oldicon jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
                       role="presentation">
                       <path fill="none" d="M0 0h24v24H0z"></path>
                       <path
                         d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z">
                       </path>
-                    </svg></div> -->
+                    </svg></div>
                   <!-- End -->
                   <div class="jss292 jss120">
                     <h2 class="jss51 jss67 jss84 jss78">Anti-phishing</h2>
@@ -178,15 +179,15 @@
               </div>
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
-                  <!-- <span class="var icon clap">🐢</span> -->
-                  <span class="var icon clap">🐢</span>
-                  <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
+                  <!-- STARTO -->
+                  <span class="nonvar icon clap">🐢</span>
+                  <div class="nonvar oldicon jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
                       role="presentation">
                       <path fill="none" d="M0 0h24v24H0z"></path>
                       <path
                         d="M16.5 13c-1.2 0-3.07.34-4.5 1-1.43-.67-3.3-1-4.5-1C5.33 13 1 14.08 1 16.25V19h22v-2.75c0-2.17-4.33-3.25-6.5-3.25zm-4 4.5h-10v-1.25c0-.54 2.56-1.75 5-1.75s5 1.21 5 1.75v1.25zm9 0H14v-1.25c0-.46-.2-.86-.52-1.22.88-.3 1.96-.53 3.02-.53 2.44 0 5 1.21 5 1.75v1.25zM7.5 12c1.93 0 3.5-1.57 3.5-3.5S9.43 5 7.5 5 4 6.57 4 8.5 5.57 12 7.5 12zm0-5.5c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm9 5.5c1.93 0 3.5-1.57 3.5-3.5S18.43 5 16.5 5 13 6.57 13 8.5s1.57 3.5 3.5 3.5zm0-5.5c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2z">
                       </path>
-                    </svg></div> -->
+                    </svg></div>
                   <!-- END -->
                   <div class="jss292 jss120">
                     <h2 class="jss51 jss67 jss84 jss78">Turtling in danger</h2>
@@ -196,12 +197,12 @@
               </div>
               <div class="jss129 jss168 jss174">
                 <div class="jss20 jss23 jss21 jss291 jss118">
-                    <span class="var icon">🕛</span>
-                    <!-- <div class="jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
+                    <span class="nonvar icon">🕛</span>
+                    <div class="nonvar oldicon jss119"><svg class="jss282" focusable="false" viewBox="0 0 24 24" aria-hidden="true"
                         role="presentation">
                         <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"></path>
                         <path fill="none" d="M0 0h24v24H0z"></path>
-                      </svg></div> -->
+                      </svg></div>
                   <!-- END -->
                   <div class="jss292 jss120">
                     <h2 class="jss51 jss67 jss84 jss78">24/7 Uptime</h2>
